--- a/public/checkoutAshion.html
+++ b/public/checkoutAshion.html
@@ -15,14 +15,14 @@
     rel="stylesheet">
 
     <!-- Css Styles -->
-    <link rel="stylesheet" href="css/bootstrap.min.css" type="text/css">
-    <link rel="stylesheet" href="css/font-awesome.min.css" type="text/css">
-    <link rel="stylesheet" href="css/elegant-icons.css" type="text/css">
-    <link rel="stylesheet" href="css/jquery-ui.min.css" type="text/css">
-    <link rel="stylesheet" href="css/magnific-popup.css" type="text/css">
-    <link rel="stylesheet" href="css/owl.carousel.min.css" type="text/css">
-    <link rel="stylesheet" href="css/slicknav.min.css" type="text/css">
-    <link rel="stylesheet" href="css/style.css" type="text/css">
+    <link rel="stylesheet" href="css3/bootstrap.min.css" type="text/css">
+    <link rel="stylesheet" href="css3/font-awesome.min.css" type="text/css">
+    <link rel="stylesheet" href="css3/elegant-icons.css" type="text/css">
+    <link rel="stylesheet" href="css3/jquery-ui.min.css" type="text/css">
+    <link rel="stylesheet" href="css3/magnific-popup.css" type="text/css">
+    <link rel="stylesheet" href="css3/owl.carousel.min.css" type="text/css">
+    <link rel="stylesheet" href="css3/slicknav.min.css" type="text/css">
+    <link rel="stylesheet" href="css3/style.css" type="text/css">
 </head>
 
 <body>
@@ -45,7 +45,7 @@
             </a></li>
         </ul>
         <div class="offcanvas__logo">
-            <a href="./index.html"><img src="img/logo.png" alt=""></a>
+            <a href="./index.html"><img src="img3/logo.png" alt=""></a>
         </div>
         <div id="mobile-menu-wrap"></div>
         <div class="offcanvas__auth">
@@ -61,7 +61,7 @@
             <div class="row">
                 <div class="col-xl-3 col-lg-2">
                     <div class="header__logo">
-                        <a href="./index.html"><img src="img/logo.png" alt=""></a>
+                        <a href="./index.html"><img src="img3/logo.png" alt=""></a>
                     </div>
                 </div>
                 <div class="col-xl-6 col-lg-7">
@@ -404,16 +404,16 @@
         <!-- Search End -->
 
         <!-- Js Plugins -->
-        <script src="js/jquery-3.3.1.min.js"></script>
-        <script src="js/bootstrap.min.js"></script>
-        <script src="js/jquery.magnific-popup.min.js"></script>
-        <script src="js/jquery-ui.min.js"></script>
-        <script src="js/mixitup.min.js"></script>
-        <script src="js/jquery.countdown.min.js"></script>
-        <script src="js/jquery.slicknav.js"></script>
-        <script src="js/owl.carousel.min.js"></script>
-        <script src="js/jquery.nicescroll.min.js"></script>
-        <script src="js/main.js"></script>
+        <script src="js3/jquery-3.3.1.min.js"></script>
+        <script src="js3/bootstrap.min.js"></script>
+        <script src="js3/jquery.magnific-popup.min.js"></script>
+        <script src="js3/jquery-ui.min.js"></script>
+        <script src="js3/mixitup.min.js"></script>
+        <script src="js3/jquery.countdown.min.js"></script>
+        <script src="js3/jquery.slicknav.js"></script>
+        <script src="js3/owl.carousel.min.js"></script>
+        <script src="js3/jquery.nicescroll.min.js"></script>
+        <script src="js3/main.js"></script>
     </body>
 
     </html>
